adicionado opencv headless, removido rtsp stream

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,8 @@ Pillow==8.2.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 PyWavelets==1.1.1
-scikit-image==0.18.2
 scipy==1.7.0
 six==1.16.0
 tifffile==2021.6.14
 Werkzeug==2.0.1
+opencv-python-headless
