--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
 click==8.0.1
 cycler==0.10.0
 decorator==4.4.2
@@ -21,4 +22,5 @@ six==1.16.0
 tifffile==2021.6.14
 Werkzeug==2.0.1
 opencv-python-headless
-torch==1.7.1+cpu
+torch==1.8.2+cpu 
+torchvision==0.9.2+cpu
